--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="tab_text_1">정류장</string>
     <string name="tab_text_2">버스</string>
+    <string name="edit_text_hint">검색어를 입력하세요</string>
 </resources>
