--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="tab_text_1">정류장</string>
     <string name="tab_text_2">버스</string>
     <string name="edit_text_hint">검색어를 입력하세요</string>
+    <string name="bus_route">%1$s ⇆ %2$s</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
